syntax = "proto3";

package ru.otus.protobuf.generated;

option java_multiple_files = true;

message RequestMessage {
    int64 firstValue = 1;
    int64 lastValue = 2;
}

message ResponseMessage {
    int64 value = 1;
}

service RemoteCounterService {
    rpc getValuesStream(RequestMessage) returns (stream ResponseMessage);
}
